--- a/Web.config
+++ b/Web.config
@@ -69,5 +69,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="kenguEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=cubach.ru;user id=reeder;password=67FPmatIodxe1GJP;database=kengu&quot;" providerName="System.Data.EntityClient" />
+    <add name="kenguru" connectionString="server=cubach.ru;user id=reeder;password=67FPmatIodxe1GJP;database=kengu" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
