--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ _[Ss]cripts
 *.ncrunchsolution
 *.dot[Cc]over
 .vs/Kenguru(four)/v16/Server/sqlite3/db.lock
+.vs/Kenguru(four)/v16/Server/sqlite3/storage.ide-wal
+.vs/Kenguru(four)/v16/Server/sqlite3/storage.ide-shm
