--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -152,16 +152,16 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="catigories.cs" />
+    <Compile Include="Contecst\catigories.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="goods.cs" />
-    <Compile Include="kenguru.cs" />
-    <Compile Include="orders.cs" />
+    <Compile Include="Contecst\goods.cs" />
+    <Compile Include="Contecst\kenguru.cs" />
+    <Compile Include="Contecst\orders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sellers.cs" />
+    <Compile Include="Contecst\sellers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
