--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -160,6 +160,8 @@
     <Compile Include="Contecst\goods.cs" />
     <Compile Include="Contecst\kenguru.cs" />
     <Compile Include="Contecst\orders.cs" />
+    <Compile Include="htmlHelpers\PagingHelpers.cs" />
+    <Compile Include="Models\PageInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contecst\sellers.cs" />
   </ItemGroup>
@@ -202,7 +204,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
