--- a/packages.config
+++ b/packages.config
@@ -3,12 +3,13 @@
   <package id="ActionMailer" version="0.7.4" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="MailKit" version="2.5.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="MimeKit" version="2.5.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.19" targetFramework="net472" />
   <package id="MySql.Data.EntityFramework" version="8.0.19" targetFramework="net472" />
