- categories on home - link between category and parent category

--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -229,6 +229,7 @@
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\Good.css" />
     <Content Include="Content\Home.css" />
+    <Content Include="Content\js\AppearMenu.js" />
     <Content Include="Content\Seller.css" />
     <Content Include="favicon.ico" />
     <Content Include="Fonts\glyphicons-halflings-regular.svg" />
@@ -267,11 +268,11 @@
     <Content Include="Views\Seller\Index.cshtml" />
     <Content Include="Views\Seller\Orders.cshtml" />
     <Content Include="Views\Shared\ViewSeller.cshtml" />
+    <Content Include="Views\Home\SubMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="UploadFIles\3\" />
-    <Folder Include="Views\Seller\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Fonts\glyphicons-halflings-regular.woff2" />
