--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -269,6 +269,7 @@
     <Content Include="Views\Seller\Orders.cshtml" />
     <Content Include="Views\Shared\ViewSeller.cshtml" />
     <Content Include="Views\Home\SubMenu.cshtml" />
+    <Content Include="Views\Seller\Property.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
