--- a/bin/Kenguru(four).dll.config
+++ b/bin/Kenguru(four).dll.config
@@ -77,6 +77,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="kenguEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=cubach.ru;user id=reeder;password=67FPmatIodxe1GJP;database=kengu&quot;" providerName="System.Data.EntityClient" />
-    <add name="kenguru" connectionString="server=cubach.ru;user id=reeder;password=67FPmatIodxe1GJP;database=kengu" providerName="MySql.Data.MySqlClient" />
+    <add name="kenguru" connectionString="server=cubach.ru;user id=reeder;password=67FPmatIodxe1GJP;database=kengu;charset=utf8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
