gitler the best seller

--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -203,6 +203,7 @@
     <Compile Include="HtmlHelpers\CatalogHelper.cs" />
     <Compile Include="HtmlHelpers\EmailService.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\GoodReport.cs" />
     <Compile Include="Models\Seller.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\CartController.cs" />
@@ -273,6 +274,7 @@
     <Content Include="Views\Home\SubMenu.cshtml" />
     <Content Include="Views\Seller\Property.cshtml" />
     <Content Include="Views\Seller\OrderInfo.cshtml" />
+    <Content Include="Views\Seller\Report.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
