Комод. Патефонная злая игла. Тифозно-иконная комната. Фуга. Где ты была? Когда ты была, Сестра милосердия (в скобках - подруга)?
Плохая писклявая плоская твердь -
Кровать, на которой всё разом зачато:
Волхвы и желания, голод и смерть,
Друзья и враги, сыновья и внучата.

И запах клопов - будто запах духов.
Бедовые платьица, примусы, слоники.
Басовый аккорд фисгармонных мехов.
Кресло в морщинах. Стихи и поклонники...

А год безымянный, безвременный век.
Война - не война, но тоскливо и вьюга.
И там за стеклом - молодой человек
И всё еще девочка (в скобках - подруга)

--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -204,6 +204,7 @@
     <Compile Include="HtmlHelpers\EmailService.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\GoodReport.cs" />
+    <Compile Include="Models\OrderRequest.cs" />
     <Compile Include="Models\Seller.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\CartController.cs" />
