--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -204,7 +204,6 @@
     <Compile Include="HtmlHelpers\EmailService.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\GoodReport.cs" />
-    <Compile Include="Models\OrderRequest.cs" />
     <Compile Include="Models\Seller.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\CartController.cs" />
@@ -274,6 +273,8 @@
     <Content Include="Views\Seller\Property.cshtml" />
     <Content Include="Views\Seller\OrderInfo.cshtml" />
     <Content Include="Views\Seller\Report.cshtml" />
+    <Content Include="Views\Seller\MyGoods.cshtml" />
+    <Content Include="Views\Seller\ChangeGoods.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
