--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -289,6 +289,7 @@
     <Content Include="Views\Catalog\Index.cshtml" />
     <Content Include="Views\SellerStore\Index.cshtml" />
     <Content Include="Views\Home\CheckStateOrder.cshtml" />
+    <Content Include="Views\Partial\OrderInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
