--- a/packages.config
+++ b/packages.config
@@ -4,8 +4,12 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net472" />
+  <package id="FastMember" version="1.3.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -36,6 +40,8 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
   <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net472" />
