--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -229,6 +229,7 @@
     <Compile Include="HtmlHelpers\EmailService.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Permition.cs" />
     <Compile Include="Models\GoodReport.cs" />
     <Compile Include="Models\ViewModels\PageInfo.cs" />
     <Compile Include="Models\ViewModels\SearchGoodViewModel.cs" />
