--- a/Kenguru(four).csproj
+++ b/Kenguru(four).csproj
@@ -299,7 +299,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
-    <Content Include="Views\Auth\Index.cshtml" />
+    <Content Include="Views\Auth\Registration.cshtml" />
     <Content Include="Views\Auth\GoToMail.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Good\Index.cshtml" />
@@ -314,7 +314,6 @@
     <Content Include="Views\Cart\Completed.cshtml" />
     <Content Include="Views\Cart\CompleteOrderView.cshtml" />
     <Content Include="Views\ErrorPageView.cshtml" />
-
     <Content Include="Views\Seller\MyGoods.cshtml" />
     <Content Include="Views\Seller\ChangeGoods.cshtml" />
     <Content Include="Views\Catalog\SubCategories.cshtml" />
@@ -326,6 +325,7 @@
     <Content Include="Views\Seller\GlobalDwownload.cshtml" />
     <Content Include="Views\Seller\ReportTable.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Auth\Enter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
